add input de coordenadas en el admin / Se muestra mapa en details de la propiedad
